app/assets/stylesheets/application.scss
// Graphical variables
@import "config/fonts";
@import "config/colors";
@import "config/bootstrap_variables";

// External libraries
@import "bootstrap/scss/bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";

// Your CSS partials
@import "components/index";
@import "pages/index";

.banner {
  background-image: asset-url('dog.jpg');
  background-size: cover;
  background-position: center;
  height: 800px;
}

.home {
  color: white;
  text-align: left;
  display: flex;
  font-size: 36px;
  font-weight: bold;
  background-size: cover;
  background-position: center;
  padding: 300px 0px 20px 0px;
  padding-right: 550px;
  margin-left: -50px;
}

.home-p {
  color: white;
  display: left;
  font-size: 20px;
  margin-left: -50px;
  padding-right: 550px;
}

.btn_home {
  margin-left: -50px;
  background-color: #00303F;
  border: 2px solid #00303F;
  border-radius: 4px
}

.btn_home:hover {
  color: #5B5B5B;
  margin-left: -50px;
  background-color: #CCFFBD;
  border: 2px solid #CCFFBD;
  border-radius: 4px
}

.navbar-brand {
  radius: 50px;
}

